Fixed a small bug
variable calls

--- a/DragonTacticsSheet.html
+++ b/DragonTacticsSheet.html
@@ -1652,7 +1652,7 @@ on("change:repeating_standard:standard-accessory", function (eventInfo) {
                     "repeating_standard_standard-hitbonus-accessory": parseInt(
                         values[attack]
                     ),
-                    "repeating_standard_standard-damagedice": damagedice,
+                    "repeating_standard_standard-damagedice": damageroll,
                     "repeating_standard_standard-critdice": critdice
                 });
             }
@@ -1771,7 +1771,7 @@ on("change:repeating_move:move-accessory", function (eventInfo) {
                     "repeating_move_move-hitbonus-accessory": parseInt(
                         values[attack]
                     ),
-                    "repeating_move_move-damagedice": damagedice,
+                    "repeating_move_move-damagedice": damageroll,
                     "repeating_move_move-critdice": critdice
                 });
             }
@@ -1890,7 +1890,7 @@ on("change:repeating_minor:minor-accessory", function (eventInfo) {
                     "repeating_minor_minor-hitbonus-accessory": parseInt(
                         values[attack]
                     ),
-                    "repeating_minor_minor-damagedice": damagedice,
+                    "repeating_minor_minor-damagedice": damageroll,
                     "repeating_minor_minor-critdice": critdice
                 });
             }
@@ -2009,7 +2009,7 @@ on("change:repeating_reaction:reaction-accessory", function (eventInfo) {
                     "repeating_reaction_reaction-hitbonus-accessory": parseInt(
                         values[attack]
                     ),
-                    "repeating_reaction_reaction-damagedice": damagedice,
+                    "repeating_reaction_reaction-damagedice": damageroll,
                     "repeating_reaction_reaction-critdice": critdice
                 });
             }
