--- a/DragonTacticsSheet.html
+++ b/DragonTacticsSheet.html
@@ -1641,7 +1641,7 @@ on("change:bonusdice-entry", function () {
 
 on("change:repeating_standard:standard-accessory", function (eventInfo) {
     var accessory = eventInfo.newValue;
-    var attack = accessory + "-hitbonus";
+    var attack = accessory + "-prof";
     var damageroll = accessory + "-damageroll";
     var crit = accessory + "-critdmg";
     if (accessory.substring(0, 3) == "wep") {
@@ -1760,7 +1760,7 @@ on("change:repeating_standard:standard-damagedice", function () {
 
 on("change:repeating_move:move-accessory", function (eventInfo) {
     var accessory = eventInfo.newValue;
-    var attack = accessory + "-hitbonus";
+    var attack = accessory + "-prof";
     var damageroll = accessory + "-damageroll";
     var crit = accessory + "-critdmg";
     if (accessory.substring(0, 3) == "wep") {
@@ -1879,7 +1879,7 @@ on("change:repeating_move:move-damagedice", function () {
 
 on("change:repeating_minor:minor-accessory", function (eventInfo) {
     var accessory = eventInfo.newValue;
-    var attack = accessory + "-hitbonus";
+    var attack = accessory + "-prof";
     var damageroll = accessory + "-damageroll";
     var crit = accessory + "-critdmg";
     if (accessory.substring(0, 3) == "wep") {
@@ -1998,7 +1998,7 @@ on("change:repeating_minor:minor-damagedice", function () {
 
 on("change:repeating_reaction:reaction-accessory", function (eventInfo) {
     var accessory = eventInfo.newValue;
-    var attack = accessory + "-hitbonus";
+    var attack = accessory + "-prof";
     var damageroll = accessory + "-damageroll";
     var crit = accessory + "-critdmg";
     if (accessory.substring(0, 3) == "wep") {
